--- a/client/src/assets/scss/home.scss
+++ b/client/src/assets/scss/home.scss
@@ -409,6 +409,7 @@
     }
     .home-testimonial-par {
         font-size: 16px;
+        max-width: 90%;
     }
     #left-testimonial-arrow {
         padding: 0 10px 0 5px;
@@ -434,10 +435,6 @@
     .home-header2 {
         font-size: 30px;
         max-width: 90%;
-    }
-    .carousel-learn-more {
-        width: 125px;
-        height: 30px;
     }
     .carousel-button {
         font-size: 18px;
