--- a/client/src/assets/css/about.css
+++ b/client/src/assets/css/about.css
@@ -97,6 +97,13 @@
   .about-par {
     font-size: 18px;
   }
+
+  .about-top-container {
+    height: 30vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: scroll;
+  }
 }
 
 /*# sourceMappingURL=about.css.map */
