--- a/client/src/assets/scss/about.scss
+++ b/client/src/assets/scss/about.scss
@@ -95,4 +95,10 @@
     .about-par {
         font-size: 18px;
     }
+    .about-top-container {
+        height: 30vh;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-attachment: scroll;
+    }
 }
