--- a/client/src/assets/css/styles.css
+++ b/client/src/assets/css/styles.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   background: #f7f7f7;
-  overflow-y: hidden;
+  overflow-x: hidden;
   position: relative;
 }
 
