--- a/client/src/assets/scss/styles.scss
+++ b/client/src/assets/scss/styles.scss
@@ -6,9 +6,8 @@ body {
     margin: 0;
     padding: 0;
     background: #f7f7f7;
-    overflow-y: hidden;
+    overflow-x: hidden;
     position: relative;
-
 }
 
 #app-container {
