--- a/client/src/assets/css/contact.css
+++ b/client/src/assets/css/contact.css
@@ -46,7 +46,6 @@
   padding: 25px 10px;
   margin: 0;
   margin-bottom: 25px;
-  background: #F5F5F5;
 }
 
 .contact-column {
@@ -64,6 +63,8 @@
   color: #4a4a4a;
   padding: 15px 0 5px 0;
   margin: 0;
+  display: flex;
+  flex-flow: column;
 }
 
 .contact-input {
